feature: GET /exam/{examId} 요청 반영 #65
- dto 재정의
- 테스트코드 재작성
