# src/main/resources/static/api/v1/openapi3.yaml
@@ -30,7 +30,7 @@ paths:
       tags:
       - exams
       summary: Add exams
-      description: 회원만이 시험을 추가할 수 있습니다.
+      description: 회원만이 시험을 추가할 수 있습니다.응답 message로 생성된 시험지 ID를 반환합니다.
       operationId: add-exams
       requestBody:
         content:
@@ -65,10 +65,10 @@ paths:
               $ref: '#/components/schemas/api-v1-users-963924044'
             examples:
               user add:
-                value: "{\"password\":\"90b43f80-d6a5-42ab-94b6-1fea9309aabe!\",\"\
-                  password_confirm\":\"90b43f80-d6a5-42ab-94b6-1fea9309aabe!\",\"\
-                  user_id\":\"90b43f80-d6a5-42ab-94b6-1fea9309aabe@gmail.com\",\"\
-                  name\":\"90b43f80-d6a5-42ab-94b6-1fea9309aabe\"}"
+                value: "{\"password\":\"c0311ec1-6de8-4422-91ca-5784bb729b17!\",\"\
+                  password_confirm\":\"c0311ec1-6de8-4422-91ca-5784bb729b17!\",\"\
+                  user_id\":\"c0311ec1-6de8-4422-91ca-5784bb729b17@gmail.com\",\"\
+                  name\":\"c0311ec1-6de8-4422-91ca-5784bb729b17\"}"
       responses:
         "200":
           description: "200"
@@ -96,7 +96,8 @@ paths:
                 $ref: '#/components/schemas/ExamType'
               examples:
                 exam-type:
-                  value: "{\"category\":[\"상황\",\"표지\",\"화물\",\"법\"]}"
+                  value: "{\"exam_title\":\"운전면허 - 1,2종\",\"tags\":{\"category\":[\"\
+                    상황\",\"표지\",\"화물\",\"법\"]}}"
         "400":
           description: "400"
     put:
@@ -189,21 +190,6 @@ paths:
                   value: "{\"user_name\":\"lab1\",\"login\":true}"
 components:
   schemas:
-    ExamType:
-      title: ExamType
-      required:
-      - category
-      type: object
-      properties:
-        category:
-          type: array
-          description: List of tags
-          items:
-            oneOf:
-            - type: object
-            - type: boolean
-            - type: string
-            - type: number
     api-v1-exams1523854693:
       required:
       - code
@@ -216,6 +202,9 @@ components:
         message:
           type: string
           description: 생성된 시험지 ID
+    ExamType:
+      title: ExamType
+      type: object
     ExamList:
       title: ExamList
       required:
@@ -262,6 +251,20 @@ components:
         exam_title:
           type: string
           description: 시험지 이름
+    api-v1-users-status615510992:
+      required:
+      - login
+      - user_name
+      type: object
+      properties:
+        user_name:
+          type: string
+          description: 사용자 이름
+        login:
+          type: boolean
+          description: 로그인 여부
+    api-v1-exams-examId486549215:
+      type: object
     api-v1-users-963924044:
       required:
       - name
@@ -282,17 +285,3 @@ components:
         name:
           type: string
           description: User name
-    api-v1-users-status615510992:
-      required:
-      - login
-      - user_name
-      type: object
-      properties:
-        user_name:
-          type: string
-          description: 사용자 이름
-        login:
-          type: boolean
-          description: 로그인 여부
-    api-v1-exams-examId486549215:
-      type: object
